[gd_scene load_steps=11 format=3 uid="uid://dbcs1r77hgb0e"]

[ext_resource type="Script" path="res://scripts/how_to_play.gd" id="1_gapq2"]
[ext_resource type="Texture2D" uid="uid://jq1hxv74rd8u" path="res://assets/images/background_lg.png" id="1_lq5mt"]
[ext_resource type="Texture2D" uid="uid://cpxbnhqkdmvlv" path="res://assets/kenney_input-prompts/keyboard_space_outline.png" id="2_ca38d"]
[ext_resource type="Texture2D" uid="uid://c40sprr5wl42u" path="res://assets/kenney_input-prompts/keyboard_escape_outline.png" id="3_53bjx"]
[ext_resource type="Texture2D" uid="uid://ds7vijmqffy20" path="res://assets/kenney_input-prompts/keyboard_arrows_down.png" id="4_iocxp"]
[ext_resource type="Texture2D" uid="uid://bbd4f04px1caq" path="res://assets/kenney_input-prompts/keyboard_arrows_left.png" id="5_lmj7f"]
[ext_resource type="Texture2D" uid="uid://bu2lycnfm672q" path="res://assets/kenney_input-prompts/keyboard_arrows_right.png" id="6_mqki5"]
[ext_resource type="Texture2D" uid="uid://bsdga5ykyhxs5" path="res://assets/kenney_input-prompts/keyboard_arrows_up.png" id="7_1owft"]
[ext_resource type="AudioStream" uid="uid://ce4jt2vnytw2e" path="res://sounds/button_click.wav" id="9_q07d1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vpf1a"]
bg_color = Color(0.964706, 0.937255, 0.913725, 0.156863)

[node name="HowToPlay" type="Node2D"]
script = ExtResource("1_gapq2")
metadata/_edit_vertical_guides_ = [960.0]
metadata/_edit_horizontal_guides_ = [270.0]

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="ColorRect"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_lq5mt")

[node name="Title" type="HBoxContainer" parent="."]
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 500.0
offset_top = 90.0
offset_right = 1420.0
offset_bottom = 159.0
grow_horizontal = 0
grow_vertical = 2
alignment = 1

[node name="Title" type="Label" parent="Title"]
layout_mode = 2
theme_override_colors/font_color = Color(0.964706, 0.937255, 0.913725, 1)
theme_override_font_sizes/font_size = 50
text = "Como jogar?"

[node name="Back" type="Button" parent="."]
offset_left = 874.0
offset_top = 923.0
offset_right = 1046.0
offset_bottom = 987.0
mouse_default_cursor_shape = 2
theme_override_colors/font_hover_color = Color(0.839216, 0.694118, 0.658824, 1)
theme_override_colors/font_pressed_color = Color(0.584314, 0.388235, 0.258824, 1)
theme_override_colors/font_color = Color(0.964706, 0.937255, 0.913725, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_vpf1a")
text = "Concluir"

[node name="ColorRectBorderSpace" type="ColorRect" parent="."]
offset_left = 205.0
offset_top = 270.0
offset_right = 655.0
offset_bottom = 540.0
color = Color(0.964706, 0.937255, 0.913725, 1)

[node name="ColorRectBackground" type="ColorRect" parent="ColorRectBorderSpace"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 440.0
offset_bottom = 260.0
color = Color(0, 0, 0, 1)

[node name="TextureRect" type="TextureRect" parent="ColorRectBorderSpace"]
layout_mode = 0
offset_left = 16.0
offset_top = 74.0
offset_right = 144.0
offset_bottom = 202.0
texture = ExtResource("2_ca38d")

[node name="Title" type="Label" parent="ColorRectBorderSpace"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 0
offset_left = 150.0
offset_top = 27.0
offset_right = 431.0
offset_bottom = 76.0
theme_override_colors/font_color = Color(0.964706, 0.937255, 0.913725, 1)
theme_override_font_sizes/font_size = 25
text = "Para abrir desafios e área de estudo"
autowrap_mode = 2

[node name="Description" type="Label" parent="ColorRectBorderSpace"]
layout_mode = 0
offset_left = 146.0
offset_top = 119.0
offset_right = 422.0
offset_bottom = 232.0
theme_override_colors/font_color = Color(0.964706, 0.937255, 0.913725, 1)
theme_override_font_sizes/font_size = 18
text = "Use a tecla de 'Espaço' para abrir as áreas de estudo e de desafios (sinalizadas com o ícone de balão)"
autowrap_mode = 2

[node name="ColorRectBorderEsc" type="ColorRect" parent="."]
offset_left = 735.0
offset_top = 270.0
offset_right = 1185.0
offset_bottom = 540.0
color = Color(0.964706, 0.937255, 0.913725, 1)

[node name="ColorRectBackground" type="ColorRect" parent="ColorRectBorderEsc"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 440.0
offset_bottom = 260.0
color = Color(0, 0, 0, 1)

[node name="TextureRect" type="TextureRect" parent="ColorRectBorderEsc"]
layout_mode = 0
offset_left = 16.0
offset_top = 74.0
offset_right = 144.0
offset_bottom = 202.0
texture = ExtResource("3_53bjx")

[node name="Title" type="Label" parent="ColorRectBorderEsc"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 0
offset_left = 150.0
offset_top = 27.0
offset_right = 431.0
offset_bottom = 76.0
theme_override_colors/font_color = Color(0.964706, 0.937255, 0.913725, 1)
theme_override_font_sizes/font_size = 25
text = "Para fechar desafios e área de estudo"
autowrap_mode = 2

[node name="Description" type="Label" parent="ColorRectBorderEsc"]
layout_mode = 0
offset_left = 146.0
offset_top = 119.0
offset_right = 422.0
offset_bottom = 232.0
theme_override_colors/font_color = Color(0.964706, 0.937255, 0.913725, 1)
theme_override_font_sizes/font_size = 18
text = "Use a tecla de 'Esc' para fechar as áreas de estudo e de desafios."
autowrap_mode = 2

[node name="ColorRectBorderDown" type="ColorRect" parent="."]
offset_left = 1265.0
offset_top = 270.0
offset_right = 1715.0
offset_bottom = 540.0
color = Color(0.964706, 0.937255, 0.913725, 1)

[node name="ColorRectBackground" type="ColorRect" parent="ColorRectBorderDown"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 440.0
offset_bottom = 260.0
color = Color(0, 0, 0, 1)

[node name="TextureRect" type="TextureRect" parent="ColorRectBorderDown"]
layout_mode = 0
offset_left = 16.0
offset_top = 74.0
offset_right = 144.0
offset_bottom = 202.0
texture = ExtResource("4_iocxp")

[node name="Title" type="Label" parent="ColorRectBorderDown"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 0
offset_left = 150.0
offset_top = 27.0
offset_right = 431.0
offset_bottom = 76.0
theme_override_colors/font_color = Color(0.964706, 0.937255, 0.913725, 1)
theme_override_font_sizes/font_size = 25
text = "Para andar com o boneco para abaixo"
autowrap_mode = 2

[node name="Description" type="Label" parent="ColorRectBorderDown"]
layout_mode = 0
offset_left = 146.0
offset_top = 119.0
offset_right = 422.0
offset_bottom = 232.0
theme_override_colors/font_color = Color(0.964706, 0.937255, 0.913725, 1)
theme_override_font_sizes/font_size = 18
text = "Use a tecla indicada na imagem para que o boneco ande para baixo."
autowrap_mode = 2

[node name="ColorRectBorderLeft" type="ColorRect" parent="."]
offset_left = 205.0
offset_top = 580.0
offset_right = 655.0
offset_bottom = 850.0
color = Color(0.964706, 0.937255, 0.913725, 1)

[node name="ColorRectBackground" type="ColorRect" parent="ColorRectBorderLeft"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 440.0
offset_bottom = 260.0
color = Color(0, 0, 0, 1)

[node name="TextureRect" type="TextureRect" parent="ColorRectBorderLeft"]
layout_mode = 0
offset_left = 16.0
offset_top = 74.0
offset_right = 144.0
offset_bottom = 202.0
texture = ExtResource("5_lmj7f")

[node name="Title" type="Label" parent="ColorRectBorderLeft"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 0
offset_left = 144.0
offset_top = 27.0
offset_right = 434.0
offset_bottom = 138.0
theme_override_colors/font_color = Color(0.964706, 0.937255, 0.913725, 1)
theme_override_font_sizes/font_size = 25
text = "Para andar com o boneco para a esquerda"
autowrap_mode = 2

[node name="Description" type="Label" parent="ColorRectBorderLeft"]
layout_mode = 0
offset_left = 145.0
offset_top = 146.0
offset_right = 421.0
offset_bottom = 259.0
theme_override_colors/font_color = Color(0.964706, 0.937255, 0.913725, 1)
theme_override_font_sizes/font_size = 18
text = "Use a tecla indicada na imagem para que o boneco ande para a esquerda."
autowrap_mode = 2

[node name="ColorRectBorderRight" type="ColorRect" parent="."]
offset_left = 735.0
offset_top = 580.0
offset_right = 1185.0
offset_bottom = 850.0
color = Color(0.964706, 0.937255, 0.913725, 1)

[node name="ColorRectBackground" type="ColorRect" parent="ColorRectBorderRight"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 440.0
offset_bottom = 260.0
color = Color(0, 0, 0, 1)

[node name="TextureRect" type="TextureRect" parent="ColorRectBorderRight"]
layout_mode = 0
offset_left = 16.0
offset_top = 74.0
offset_right = 144.0
offset_bottom = 202.0
texture = ExtResource("6_mqki5")

[node name="Title" type="Label" parent="ColorRectBorderRight"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 0
offset_left = 144.0
offset_top = 27.0
offset_right = 434.0
offset_bottom = 138.0
theme_override_colors/font_color = Color(0.964706, 0.937255, 0.913725, 1)
theme_override_font_sizes/font_size = 25
text = "Para andar com o boneco para a direita"
autowrap_mode = 2

[node name="Description" type="Label" parent="ColorRectBorderRight"]
layout_mode = 0
offset_left = 145.0
offset_top = 126.0
offset_right = 421.0
offset_bottom = 239.0
theme_override_colors/font_color = Color(0.964706, 0.937255, 0.913725, 1)
theme_override_font_sizes/font_size = 18
text = "Use a tecla indicada na imagem para que o boneco ande para a direita."
autowrap_mode = 2

[node name="ColorRectBorderUp" type="ColorRect" parent="."]
offset_left = 1265.0
offset_top = 580.0
offset_right = 1715.0
offset_bottom = 850.0
color = Color(0.964706, 0.937255, 0.913725, 1)

[node name="ColorRectBackground" type="ColorRect" parent="ColorRectBorderUp"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 440.0
offset_bottom = 260.0
color = Color(0, 0, 0, 1)

[node name="TextureRect" type="TextureRect" parent="ColorRectBorderUp"]
layout_mode = 0
offset_left = 16.0
offset_top = 74.0
offset_right = 144.0
offset_bottom = 202.0
texture = ExtResource("7_1owft")

[node name="Title" type="Label" parent="ColorRectBorderUp"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 0
offset_left = 144.0
offset_top = 27.0
offset_right = 434.0
offset_bottom = 138.0
theme_override_colors/font_color = Color(0.964706, 0.937255, 0.913725, 1)
theme_override_font_sizes/font_size = 25
text = "Para andar com o boneco para cima"
autowrap_mode = 2

[node name="Description" type="Label" parent="ColorRectBorderUp"]
layout_mode = 0
offset_left = 145.0
offset_top = 126.0
offset_right = 421.0
offset_bottom = 239.0
theme_override_colors/font_color = Color(0.964706, 0.937255, 0.913725, 1)
theme_override_font_sizes/font_size = 18
text = "Use a tecla indicada na imagem para que o boneco ande para cima."
autowrap_mode = 2

[node name="ClickButton" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_q07d1")
volume_db = -5.0

[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
